--- a/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
+++ b/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
@@ -4,7 +4,7 @@
 # Please see LICENSE.txt for license information.
 #
 
-homeFolderWindows=Example Launcher
-homeFolder=.examplelauncher
-launcherClass=com.skcraft.launcher.Launcher
-latestUrl=http://update.skcraft.com/quark/launcher/latest.json
+homeFolderWindows=Pl3xForge Launcher
+homeFolder=.Pl3xForge
+launcherClass=com.skcraft.launcher.FancyLauncher
+latestUrl=http://pl3x.net/launcher/latest.json
