--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -16,6 +16,6 @@ assetsSource=http://resources.download.minecraft.net/
 yggdrasilAuthUrl=https://authserver.mojang.com/authenticate
 resetPasswordUrl=https://minecraft.net/resetpassword
 
-newsUrl=http://update.skcraft.com/template/news.html?version=%s
-packageListUrl=http://update.skcraft.com/template/packages.json?key=%s
-selfUpdateUrl=http://update.skcraft.com/template/launcher/latest.json
+newsUrl=http://pl3x.net/launcher/news.html
+packageListUrl=http://pl3x.net/launcher/packages.php
+selfUpdateUrl=http://pl3x.net/launcher/latest.json
