--- a/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
+++ b/launcher-bootstrap/src/main/resources/com/skcraft/launcher/bootstrap.properties
@@ -6,5 +6,5 @@
 
 homeFolderWindows=Pl3xForge Launcher
 homeFolder=.Pl3xForge
-launcherClass=com.skcraft.launcher.FancyLauncher
+launcherClass=com.skcraft.launcher.Launcher
 latestUrl=http://pl3x.net/launcher/latest.json
